fix: fallback for the quick jump when the title is too long for small screens (#338)
It will now slide over the title, instead of sliding off the screen.

This is built on top of, but can be merged without
https://github.com/leanprover/verso/pull/315.

Closes #318 .

--- a/static/theme.css
+++ b/static/theme.css
@@ -122,3 +122,14 @@ figcaption {
 #toc .split-toc > ol .tactic-name {
   font-weight: 600;
 }
+
+/* Move the title from the header to the toc when there is not enough room for the quick jump bar. */
+@media screen and (max-width: 1100px) {
+  .toc-title {
+    display: block;
+  }
+
+  .header-title {
+    display: none;
+  }
+}
